@@ -19,10 +19,9 @@
 
 package edp.core.utils;
 
-import sun.misc.BASE64Encoder;
-
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
+import java.util.Base64;
 
 public class MD5Util {
 
@@ -40,26 +39,24 @@ public class MD5Util {
             // 创建加密对象
             MessageDigest md = MessageDigest.getInstance("md5");
             if (bit == 64) {
-                BASE64Encoder bw = new BASE64Encoder();
-                String bsB64 = bw.encode(md.digest(src.getBytes(StandardCharsets.UTF_8)));
-                md5 = bsB64;
+                Base64.Encoder encoder = Base64.getEncoder();
+                md5 = encoder.encodeToString(md.digest(src.getBytes(StandardCharsets.UTF_8)));
             } else {
                 // 计算MD5函数
                 md.update(src.getBytes(StandardCharsets.UTF_8));
                 byte b[] = md.digest();
                 int i;
-                StringBuffer sb = new StringBuffer("");
+                StringBuffer buffer = new StringBuffer("");
                 for (int offset = 0; offset < b.length; offset++) {
                     i = b[offset];
                     if (i < 0)
                         i += 256;
                     if (i < 16)
-                        sb.append("0");
-                    sb.append(Integer.toHexString(i));
+                        buffer.append("0");
+                    buffer.append(Integer.toHexString(i));
                 }
-                md5 = sb.toString();
+                md5 = buffer.toString();
                 if (bit == 16) {
-                    //截取32位md5为16位
                     String md16 = md5.substring(8, 24);
                     md5 = md16;
                     if (isUpper) {
